# bazel_delib

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: test.yml
c4go/: BUILD.bazel  main.go
test/: BUILD.bazel
