###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "bazel-go-basic",
    version = "0.0",
)

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "rules_foreign_cc", version = "0.12.0")
bazel_dep(name = "bzip2", version = "1.0.8.bcr.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")

# Hermetic C++
bazel_dep(name = "toolchains_llvm", version = "1.2.0")
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "16.0.0",
)
use_repo(llvm, "llvm_toolchain")
register_toolchains("@llvm_toolchain//:all")

# Go SDK

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.22.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(go_deps)

#http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
#http_archive(
    #name = "libjudy",
    #urls = [
        #"https://github.com/netdata/libjudy/archive/refs/tags/v1.0.5-netdata2.zip",
    #],
    #strip_prefix = "libjudy-1.0.5-netdata2",
    #build_file = "//third_party/libjudy:libjudy.BUILD.bazel",
#)

new_git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")

new_git_repository(
    name = "libjudy",
    remote = "https://github.com/netdata/libjudy",
    commit = "777c9f4a8faf3f524d0afa39fb4577876b6b646d",
    build_file = "//third_party/libjudy:libjudy.BUILD.bazel",
    patch_args = [ "-p1", ],
    patches = [
        "//third_party/libjudy:0001-fix-fix-build.patch",
    ],
)

new_git_repository(
    name = "libfst",
    remote = "https://github.com/gtkwave/gtkwave",
    commit = "0a800de96255f7fb11beadb6729fdf670da76ecb",
    build_file = "//third_party/libfst:libfst.BUILD.bazel",
)
